--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "watch": "rbxtsc -w",
     "prepublishOnly": "npm run build"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Felipellira/peek"
+  },
   "keywords": [],
   "author": "Felipe Lira",
   "license": "ISC",
